<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app"
    android:paddingBottom="80dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@color/color_37414B"
                android:fontFamily="@font/onest_medium"
                android:textSize="16sp"
                android:padding="10dp"
                app:drawableStartCompat="@drawable/ic_language"
                android:drawablePadding="20dp"/>
            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:textColor="@color/color_37414B"
                android:fontFamily="@font/onest_medium"
                android:textSize="16sp"
                android:padding="10dp"
                app:drawableStartCompat="@drawable/ic_rate"
                android:drawablePadding="20dp"/>
            <TextView
                android:id="@+id/tv_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/color_37414B"
                android:fontFamily="@font/onest_medium"
                android:textSize="16sp"
                android:padding="10dp"
                app:drawableStartCompat="@drawable/ic_share"
                android:drawablePadding="20dp"/>
            <TextView
                android:id="@+id/tv_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/color_37414B"
                android:fontFamily="@font/onest_medium"
                android:textSize="16sp"
                android:padding="10dp"
                app:drawableStartCompat="@drawable/ic_policy"
                android:drawablePadding="20dp"/>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="50dp"
        android:textSize="17sp"
        android:textColor="#787B82"
        android:gravity="center"
        android:fontFamily="@font/onest_regular"
        />
</FrameLayout>