<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_boder_header"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_home"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_top_home"
            android:drawablePadding="15dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="start|center_vertical"
            android:paddingStart="15dp"
            android:text="AR Drawing Sketch"
            android:textColor="@color/color_FF6F89"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center|center_vertical"
            android:textColor="@color/color_FF6F89"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/ar_sketch" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.ardrawing.sketch.anime.drawing.widget.NonScrollableViewPager
        android:id="@+id/viewPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_header" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_main"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_home_selected"
            android:drawablePadding="10dp"
            android:fontFamily="@font/onest_medium"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/sketches"
            android:textColor="@color/color_FF6F89"
            android:textSize="14sp"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/tv_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_heart"
            android:drawablePadding="10dp"
            android:fontFamily="@font/onest_medium"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/favorite"
            android:textColor="@color/color_8F9DAA"
            android:textSize="14sp"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_setting"
            android:drawablePadding="10dp"
            android:fontFamily="@font/onest_medium"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/setting"
            android:textColor="@color/color_8F9DAA"
            android:textSize="14sp"
            tools:ignore="UseCompatTextViewDrawableXml" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


        <include
            android:id="@+id/include"
            layout="@layout/layout_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"  />
</androidx.constraintlayout.widget.ConstraintLayout>